@@ -1,3 +1,12 @@
+2010-07-24  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Darin Adler.
+
+        [WINCE] Cleanup defines in Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=42933
+
+        * wtf/Platform.h:
+
 2010-07-23  Rafael Antognolli  <antognolli@profusion.mobi>
 
         Reviewed by Antonio Gomes.
